# mastro

./: README.md  personas.md  pyproject.toml
docs/: builder-brief-v0.1.md  maestro-design.md  maestro-guide.md  maestro-v0.1-spec.md  review-v0.1-findings.md  v0.1-status-report.md
docs/decisions/: 0001-custom-worktree-log-dirs.md
maestro_cli/: cli.py
tests/: test_cli.py
